Menu: Add style classes for new objects and fix motion on hover
For some reason the vectorBox was 1px too large.. so hovering the categories
made the search field slightly larger.

--- a/data/theme/cinnamon.css
+++ b/data/theme/cinnamon.css
@@ -1164,17 +1164,20 @@ StScrollBar StButton#vhandle:hover {
     text-align: right;
     height: 30px;
 }
-
 .menu-selected-app-box:rtl {
     padding-top: 10px;
     height: 30px;
 }
-
 .menu-selected-app-title {
     font-weight: bold;
 }
 .menu-selected-app-description {
     max-width: 150px;
+}
+.menu-top-box {
+    spacing: 10px;
+}
+.menu-systembuttons-box {
 }
 .menu-search-box:ltr {
     padding-left: 30px;
